--- a/nodeBackend/package.json
+++ b/nodeBackend/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "csurf": "^1.11.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
     "jsonwebtoken": "^8.5.1",
